# faster-gcg

./: .gitignore  README.md  pyproject.toml
src/gcg/: __init__.py  base_gcg.py  context.py  early_stop.py  faster_gcg.py  loss.py  record_set.py  standard_gcg.py  tensor_set.py  typedef.py
